<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:background="@color/color_secondary"
    android:theme="@style/Theme.WhatGames.Detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/image_back"
            android:elevation="16dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/image_search"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:elevation="16dp"
            android:contentDescription="@string/search_image"
            android:src="@drawable/ic_search"
            app:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop"
            />

        <include
            android:id="@+id/card_main_layout"
            layout="@layout/card_main_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_backdrop"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginBottom="274dp"
            app:cardBackgroundColor="@color/color_primary"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/card_main_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/backdrop_image"
                android:scaleType="fitXY"
                tools:src="@tools:sample/backgrounds/scenic" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_overview_title"
            style="@style/TextAppearance.MdcTypographyStyles.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_main_layout" />

        <TextView
            android:id="@+id/tv_overview_value"
            style="@style/TextAppearance.MdcTypographyStyles.Body2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            tools:text="@tools:sample/lorem/random"
            android:textColor="@color/white"
            android:textAlignment="inherit"
            android:justificationMode="inter_word"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_overview_title"
            app:layout_constraintStart_toStartOf="@+id/tv_overview_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_title"
            tools:targetApi="o" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>